ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-server
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: myservice.info
      http:
        paths:
          - path: /tasks(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: task-service
                port:
                  number: 4040
          - path: /users(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: connection-service
                port:
                  number: 4000
